# models/classic.js
@@ -1,0 +1,10 @@
+const mongoose = require('mongoose');
+
+const itemSchema = new mongoose.Schema({
+    name: { type: String, required: true },
+    gpower: Number,
+    attribute: String,
+
+});
+
+module.exports = mongoose.model('classic', itemSchema);
